[gd_scene load_steps=4 format=2]

[ext_resource path="res://tab_project/tab_project.gd" type="Script" id=1]
[ext_resource path="res://tab_master/tab_master.tscn" type="PackedScene" id=2]
[ext_resource path="res://user_input_entry/user_input_entry.tscn" type="PackedScene" id=3]

[node name="tab_project" type="Control"]
anchor_bottom = 1.0
margin_right = 974.0
margin_bottom = -600.0
rect_min_size = Vector2( 974, 0 )
script = ExtResource( 1 )

[node name="tab_master" parent="." instance=ExtResource( 2 )]
margin_right = 984.0
margin_bottom = 24.0
rect_min_size = Vector2( 974, 0 )

[node name="vbox" parent="tab_master" index="0"]
margin_left = 10.0
margin_right = 984.0
margin_bottom = 213.0

[node name="mc" parent="tab_master/vbox" index="0"]
margin_right = 974.0
margin_bottom = 73.0

[node name="vbox" type="VBoxContainer" parent="tab_master/vbox/mc" index="0"]
margin_right = 974.0
margin_bottom = 73.0
rect_min_size = Vector2( 974, 0 )

[node name="input_working_directory" parent="tab_master/vbox/mc/vbox" instance=ExtResource( 3 )]
editor/display_folded = true
margin_right = 974.0

[node name="input_label" parent="tab_master/vbox/mc/vbox/input_working_directory" index="0"]
margin_right = 485.0
size_flags_horizontal = 3
text = "Working Dir."

[node name="user_input" parent="tab_master/vbox/mc/vbox/input_working_directory" index="1"]
margin_left = 489.0
margin_right = 974.0
editable = false

[node name="input_units" parent="tab_master/vbox/mc/vbox/input_working_directory" index="2"]
visible = false

[node name="button_working_dir" type="Button" parent="tab_master/vbox/mc/vbox"]
margin_top = 29.0
margin_right = 974.0
margin_bottom = 49.0
text = "Change Working Directory"

[node name="FileDialog" type="FileDialog" parent="tab_master/vbox/mc/vbox/button_working_dir"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 150.511
margin_top = 46.9188
margin_right = 425.511
margin_bottom = 321.919
rect_min_size = Vector2( 275, 275 )
window_title = "Open a Directory"
resizable = true
mode = 2
access = 2
current_dir = "C:/Users/kelby/dev/software/tools/trench_logger_plus"
current_path = "C:/Users/kelby/dev/software/tools/trench_logger_plus/"

[node name="button_load_file" type="Button" parent="tab_master/vbox/mc/vbox"]
margin_top = 53.0
margin_right = 974.0
margin_bottom = 73.0
text = "Load File & Make Commands"

[node name="file_search" type="FileDialog" parent="tab_master/vbox/mc/vbox/button_load_file"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 150.511
margin_top = -1.08121
margin_right = 481.511
margin_bottom = 273.919
rect_min_size = Vector2( 275, 275 )
window_title = "Open a File"
resizable = true
mode = 0
access = 2
show_hidden_files = true
current_dir = "C:/Users/kelby/dev/software/tools/trench_logger_plus"
current_path = "C:/Users/kelby/dev/software/tools/trench_logger_plus/"

[editable path="tab_master"]

[editable path="tab_master/vbox/mc/vbox/input_working_directory"]
